--- a/src/app/recommandations/recommandations.component.html
+++ b/src/app/recommandations/recommandations.component.html
@@ -16,7 +16,6 @@
                         <button type="button" class="btn btn-default" data-dismiss="modal" #modalFermer></button>
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
@@ -24,7 +23,8 @@
     <div class="container">
         <div class="jumbotron text-left">
             <h1>Recommandations</h1>
-            <h3 style="text-align: justify;">Vous trouverez ici une liste de livres disponibles basée sur vos intêrets !</h3>
+            <h3 style="text-align: justify;">Vous trouverez ici une liste de livres disponibles basée sur vos intêrets !
+            </h3>
         </div>
         <ul style="list-style-type: none; padding:0">
             <li *ngFor="let a of j; let in = index;">
