--- a/src/app/personnal-wishlist/personnal-wishlist.component.html
+++ b/src/app/personnal-wishlist/personnal-wishlist.component.html
@@ -26,7 +26,7 @@
         <h3 style="text-align: justify;">Retrouvez ici les livres pour lesquels vous avez marqué un intérêt
         </h3>
     </div>
-    <ul style="list-style-type: none;">
+    <ul style="list-style-type: none;  padding:0;">
         <li *ngFor="let a of j">
             <div class="table-responsive">
                 <table *ngIf="a.volumeInfo.industryIdentifiers" class="table table-dark" style="align-items: center;">
