--- a/src/app/wishlist/wishlist.component.html
+++ b/src/app/wishlist/wishlist.component.html
@@ -27,7 +27,7 @@
             </div>
         </div>
     </form>
-    <ul style="list-style-type: none;">
+    <ul style="list-style-type: none;  padding:0;">
         <li *ngFor="let a of j">
             <div class="table-responsive">
                 <table *ngIf="a.volumeInfo.industryIdentifiers" class="table table-dark" style="align-items: center;">
