--- a/src/app/interets/interets.component.html
+++ b/src/app/interets/interets.component.html
@@ -1,8 +1,26 @@
 <div class="container">
-    <a #anchor href="#alert"></a>
-    <div #error class="alert alert-danger" style="display:none;">
-        <strong>Erreur</strong> Veuillez entrer au moins 5 auteurs et 5 genres.
+    <!--MODALDEBUT-->
+<div>
+    <a #trigger data-toggle="modal" href="#showModal" style="visibility: none;"></a>
+    <div #showModal id='showModal' class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" #modalTitre></h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p style="text-align: justify;" #modalContenu></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" #modalFermer></button>
+                </div>
+            </div>
+
+        </div>
     </div>
+</div>
+<!--MODALFIN-->
     <div>
         <div class="form-group required ">
             <label class="col-md-12 control-label" style="font-weight:bold;">Auteurs</label>
