Added cute username in the navbar + Nb of credits

--- a/src/app/display-user-data/display-user-data.component.html
+++ b/src/app/display-user-data/display-user-data.component.html
@@ -46,7 +46,7 @@
                             </ng-template>
                         </td>
                         <td style="text-align: right;">
-                            <button class="btn btn-primary clickable"
+                            <button class="btn btn-primary clickable" style="display: none;"
                                 (click)="takeLivre($event)">Je&nbsp;le&nbsp;veux&nbsp;!</button>
                             <button class="btn btn-primary"
                                 style="visibility: hidden;">Je&nbsp;le&nbsp;veux&nbsp;!</button>
