--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,8 +32,18 @@
     <li class="nav-item">
       <a *ngIf="!hasCookie(); else co" class="nav-link" routerLinkActive="active" routerLink="register">Connexion</a>
       <ng-template #co>
-        <a (click)="deleteCookie()" class="nav-link" routerLinkActive="active" routerLink="">Déconnexion</a>
-      </ng-template>
+        <!--
+        <a (click)="deleteCookie()" class="nav-link" routerLinkActive="active" routerLink="">Déconnexion</a>-->
+    <li class="nav-item dropdown">
+      <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+        aria-haspopup="true" aria-expanded="false">
+        <p id="nomCredits" style="display: inline;">{{nomEtCredits}}</p>
+      </a>
+      <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" (click)="deleteCookie()" href="#">Déconnection</a>
+      </div>
+    </li>
+    </ng-template>
     </li>
   </ul>
 </nav>
