--- a/src/app/frontpage/frontpage.component.html
+++ b/src/app/frontpage/frontpage.component.html
@@ -12,7 +12,8 @@
                     <p style="text-align: justify;" #modalContenu></p>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal" #modalFermer></button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" id="modalFermer"
+                        #modalFermer></button>
                 </div>
             </div>
 
