--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,84 +1,128 @@
+<!--MODALDEBUT-->
+<div>
+    <a #trigger data-toggle="modal" href="#showModal" style="visibility: none;"></a>
+    <div #showModal id='showModal' class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h4 class="modal-title" #modalTitre></h4>
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                </div>
+                <div class="modal-body">
+                    <p style="text-align: justify;" #modalContenu></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal" #modalAccepter>Oui,
+                        supprimer</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal" #modalRefuser>Non,
+                        annuler</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+</div>
+<!--MODALFIN-->
 <div class="container">
-    <table class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-        <thead onmouseover="this.style.cursor ='default'">
-            <tr>
-                <th style=" vertical-align: middle;" class="th-sm"
-                    onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer';"
-                    onmouseout="this.style.background='';this.style.color='';" style="transition: all 0.25s ease;"
-                    (click)="sortByName()">Nom
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm"
-                    onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
-                    onmouseout="this.style.background='';this.style.color='';" style="transition: all 0.25s ease;"
-                    (click)="sortBySurname()">Prénom
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm">Courriel
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm">Adresse
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm">Numero de téléphone
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm"
-                    onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
-                    onmouseout="this.style.background='';this.style.color='';" style="transition: all 0.25s ease;"
-                    (click)="sortByCredits()">Credits
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm"> Supprimer
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of list">
-                <td style=" vertical-align: middle;">{{item.Nom}}</td>
-                <td style=" vertical-align: middle;">{{item.Prenom}}</td>
-                <td style=" vertical-align: middle;">{{item.Courriel}}</td>
-                <td style=" vertical-align: middle;">{{item.Adresse_client}}</td>
-                <td style="text-align: center;  vertical-align: middle;">{{item.Numero_telephone}}</td>
-                <td style="text-align: center;  vertical-align: middle;">{{item.Credits}}</td>
-                <td style="text-align: center;  vertical-align: middle;"><button type="button"
-                        class="btn btn-danger">X</button></td>
-            </tr>
-        </tbody>
-    </table>
-    <table class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
-        <thead onmouseover="this.style.cursor ='default'">
-            <tr>
-                <th style=" vertical-align: middle;" class="th-sm"
-                    onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer';"
-                    onmouseout="this.style.background='';this.style.color='';" style="transition: all 0.25s ease;"
-                    (click)="sortByName()">Nom
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm"
-                    onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
-                    onmouseout="this.style.background='';this.style.color='';" style="transition: all 0.25s ease;"
-                    (click)="sortBySurname()">Prénom
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm">Courriel
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm">Adresse
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm">Numero de téléphone
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm"
-                    onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
-                    onmouseout="this.style.background='';this.style.color='';" style="transition: all 0.25s ease;"
-                    (click)="sortByCredits()">Credits
-                </th>
-                <th style=" vertical-align: middle;" class="th-sm"> Supprimer
-                </th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr *ngFor="let item of list">
-                <td style=" vertical-align: middle;">{{item.Nom}}</td>
-                <td style=" vertical-align: middle;">{{item.Prenom}}</td>
-                <td style=" vertical-align: middle;">{{item.Courriel}}</td>
-                <td style=" vertical-align: middle;">{{item.Adresse_client}}</td>
-                <td style="text-align: center;  vertical-align: middle;">{{item.Numero_telephone}}</td>
-                <td style="text-align: center;  vertical-align: middle;">{{item.Credits}}</td>
-                <td style="text-align: center;  vertical-align: middle;"><button type="button"
-                        class="btn btn-danger">X</button></td>
-            </tr>
-        </tbody>
-    </table>
+    <div style="display: flex;  justify-content: space-between;">
+        <h1 style="display: inline;">Tableau de bord</h1>
+        <p style="display: inline;"><i>logged as administrator</i></p>
+    </div>
+    <div>
+        <ul style="list-style-type: none;">
+            <li>
+                <h2>Liste des utilisateurs</h2>
+                <table class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                    <thead style="cursor: default; user-select: none;">
+                        <tr>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer';"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(list, 'ID_personne')">ID
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer';"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(list, 'Nom')">Nom
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(list, 'Prenom')">Prénom
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm">Courriel
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm">Adresse
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm">Numero de téléphone
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(list, 'Credits')">Credits
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"> Supprimer
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of list; let i = index" id="{{item.ID_personne}}">
+                            <td style="vertical-align: middle;">{{item.ID_personne}}</td>
+                            <td style=" vertical-align: middle;">{{item.Nom}}</td>
+                            <td style=" vertical-align: middle;">{{item.Prenom}}</td>
+                            <td style=" vertical-align: middle;">{{item.Courriel}}</td>
+                            <td style=" vertical-align: middle;">{{item.Adresse_client}}</td>
+                            <td style="text-align: center;  vertical-align: middle;">{{item.Numero_telephone}}</td>
+                            <td style="text-align: center;  vertical-align: middle;">{{item.Credits}}</td>
+                            <td style="text-align: center;  vertical-align: middle;"><button type="button"
+                                    (click)="suppression(item.Prenom + ' '+ item.Nom, $event,item.ID_personne)"
+                                    class="btn btn-danger">X</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </li>
+            <li>
+                <h2>Liste des livres à vérifier</h2>
+                <table class="table table-striped table-bordered table-sm" cellspacing="0" width="100%">
+                    <thead style="cursor: default; user-select: none;">
+                        <tr>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer';"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(livres, 'ID_Livre')">ID_Livre
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer';"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(livres, 'ID_Personne_Enregistre')">
+                                ID_Personne
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(livres, 'ISBN')">ISBN
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"
+                                onmouseover="this.style.background='#808080';this.style.color='#000000'; this.style.cursor = 'pointer'"
+                                onmouseout="this.style.background='';this.style.color='';"
+                                style="transition: all 0.25s ease;" (click)="sortBy(livres, 'Titre')">Titre
+                            </th>
+                            <th style=" vertical-align: middle;" class="th-sm"> Vérifier
+                            </th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr *ngFor="let item of livres" id={{item.ID_Livre}} >
+                            <td style="vertical-align: middle;">{{item.ID_Livre}}</td>
+                            <td style=" vertical-align: middle;">{{item.ID_Personne_Enregistre}}</td>
+                            <td style=" vertical-align: middle;">{{item.ISBN}}</td>
+                            <td style=" vertical-align: middle;">{{item.Titre}}</td>
+                            <td style="text-align: center;  vertical-align: middle;"><button type="button"
+                                    (click)="validation(item.Titre, $event)" class="btn btn-success">X</button></td>
+                        </tr>
+                    </tbody>
+                </table>
+            </li>
+        </ul>
+    </div>
 </div>
